<resources>
    <string name="app_name">Elbrus</string>
    <string name="icon_text">Elbrus</string>
    <string name="more_text_icon">Share your greatest moments with friends and family</string>
    <string name="facebook_app_id">868637133254928</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_invite">Invite</string>
    <string name="action_share">Share</string>
    <string name="action_create_album">CreateAlbum</string>
    <string name="action_create_photo">CreatePhoto</string>
    <string name="title_activity_album">Album Overview</string>
    <string name="title_activity_album_create">Create a Album</string>
    <string name="title_activity_album_detail">Album Detail</string>
    <string name="title_activity_album_share">Share a Album</string>
    <string name="title_activity_invite">Invite Friends</string>
    <string name="title_activity_photo_create">Create a Photo</string>
    <string name="title_activity_photo_detail">Photo Detail</string>
    <string name="title_activity_photo_search">Search Photos</string>
    <string name="action_photo_refresh">Refresh</string>
    <string name="action_album_refresh">Refresh</string>
    <string name="share_my_photo">Share my Photo</string>
</resources>
